[project]
name = "cc-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.29",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "ollama>=0.5.4",
    "outlines>=1.2.5",
    "tqdm>=4.67.1",
]
